# planweaver

./: .dockerignore  .env.example  .gitignore  20250215-ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  PHASE_4_TASKS.md  README.md  docker-compose.yml  hello.py  pyproject.toml
config/: domains.yaml
data/models/: README.md  default_models.yaml
data/scenarios/: README.md  blog_generation.yaml  data_analysis.yaml  market_analysis.yaml
data/scenarios/examples/: api_development.yaml  content_calendar.yaml  learning_path.yaml  research_summary.yaml  testing_strategy.yaml
data/scenarios/templates/: template.yaml
docs/: 20260216-project-docs.md  20260226-planning-enhancement-research.md  20260227-plan-optimizer-guide.md  20260227-superpowers-analysis.md  INDEX.md  README.md  TEST.md  api-reference.md  architecture.md  deployment-guide.md  roadmap-divergence-analysis.md  roadmap.md  technical_roadmap.md
docs/archive/: README.md
docs/archive/2026/: plan-optimizer-implementation-summary-2026-02-27.md  planning-frameworks-research-2026-02-26.md
docs/archive/plans/: 2025-02-27-plan-optimizer-implementation.md  2026-02-17-external-context-enhancement-design.md
docs/guides/: deployment.md  external-context.md  optimizer.md
docs/plans/: 2025-02-27-plan-optimizer-feature-design.md  2026-02-26-plan-comparison-design.md  2026-02-26-plan-comparison.md  2026-03-08-planning-evaluation-architecture.md  20260227-stability-improvements-design.md  20260227-stability-improvements.md
docs/reference/: api.md  architecture.md  testing.md
docs/superpowers/specs/: 20250312-reasoning-self-correction-design.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: fixtures.ts  history.spec.ts  homepage.spec.ts  planning-flow.spec.ts  workbench.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  planApi.ts
frontend/src/components/: CandidatePlanPanel.tsx  DemoBanner.tsx  DiffComparison.tsx  ExecutionPanel.tsx  FlowCanvas.tsx  Header.tsx  HistoryPage.tsx  NewPlanForm.tsx  PlanView.tsx  ProposalComparisonView.tsx  ProposalPanel.tsx  ProposalSelector.tsx  QuestionPanel.tsx  SideBySideComparison.tsx  Toast.test.tsx  (+3 more)
scenarios/: code_refactoring.yaml
scripts/: README.md
scripts/maintenance/: init_models.py  openrouter_models.py
src/planweaver/: __init__.py  cli.py  config.py  context_synthesis.py  critic.py  main.py  mcp_server.py  memory.py  negotiator.py  observer.py  orchestrator.py  scout.py  session.py
static/: index.html
tests/: conftest.py  test_api.py  test_api_context.py  test_candidate_flow.py  test_comparison_service.py  test_context_service.py  test_context_synthesis.py  test_coordinator.py  test_critic.py  test_debate.py  test_e2e_context.py  test_ensemble.py  test_llm_gateway.py  test_mcp_server.py  test_memory.py  test_multiagent_integration.py  test_negotiator.py  test_observer.py  test_optimizer_services.py  test_orchestrator_context.py  test_orchestrator_model_overrides.py  test_phase1_integration.py  test_phase2_integration.py  test_plan_evaluation_pipeline.py  test_plan_model.py  test_planner.py  test_planner_context.py  test_probes.py  test_reasoning_traces.py  test_scout.py  test_session.py  test_template_engine.py  test_ui_e2e.py
(+64 files in other folders)
