[project]
name = "planweaver"
version = "0.1.0"
description = "Universal LLM Planning & Execution Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "litellm>=1.35.0",
    "pyyaml>=6.0.1",
    "json-repair==0.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
    "google-genai>=1.63.0",
    "pygithub>=2.8.1",
    "tavily-python>=0.7.21",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]
